--- a/Kmeans_clustering_neighborhood.ipynb
+++ b/Kmeans_clustering_neighborhood.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing the libraries pandas and lxml install"
+    "**Importing the libraries pandas and lxml install and geocoder**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -18,25 +18,53 @@
      "text": [
       "Requirement already satisfied: lxml in /usr/local/lib/python3.6/dist-packages (4.5.2)\n",
       "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.2.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Collecting geocoder\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4f/6b/13166c909ad2f2d76b929a4227c952630ebaf0d729f6317eb09cbceccbab/geocoder-1.38.1-py2.py3-none-any.whl (98kB)\n",
+      "\u001b[K     |████████████████████████████████| 102kB 1.1MB/s ta 0:00:011\n",
+      "\u001b[?25hCollecting ratelim\n",
+      "  Downloading https://files.pythonhosted.org/packages/f2/98/7e6d147fd16a10a5f821db6e25f192265d6ecca3d82957a4fdd592cad49c/ratelim-0.1.6-py2.py3-none-any.whl\n",
+      "Collecting future\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/45/0b/38b06fd9b92dc2b68d58b75f900e97884c45bedd2ff83203d933cf5851c9/future-0.18.2.tar.gz (829kB)\n",
+      "\u001b[K     |████████████████████████████████| 829kB 8.8MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting click\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d2/3d/fa76db83bf75c4f8d338c2fd15c8d33fdd7ad23a9b5e57eb6c5de26b430e/click-7.1.2-py2.py3-none-any.whl (82kB)\n",
+      "\u001b[K     |████████████████████████████████| 92kB 29.2MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from geocoder) (2.22.0)\n",
+      "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from geocoder) (1.13.0)\n",
+      "Requirement already satisfied: decorator in /usr/local/lib/python3.6/dist-packages (from ratelim->geocoder) (4.4.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->geocoder) (2019.11.28)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->geocoder) (1.25.7)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->geocoder) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /usr/lib/python3/dist-packages (from requests->geocoder) (2.6)\n",
+      "Building wheels for collected packages: future\n",
+      "  Building wheel for future (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for future: filename=future-0.18.2-cp36-none-any.whl size=493275 sha256=2320663c8a3eefc534504616571478e5dda893192be4b2526f91a3481993e3d4\n",
+      "  Stored in directory: /root/.cache/pip/wheels/8b/99/a0/81daf51dcd359a9377b110a8a886b3895921802d2fc1b2397e\n",
+      "Successfully built future\n",
+      "Installing collected packages: ratelim, future, click, geocoder\n",
+      "Successfully installed click-7.1.2 future-0.18.2 geocoder-1.38.1 ratelim-0.1.6\n",
+      "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.2.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "!pip install lxml"
+    "!pip install lxml\n",
+    "!pip install geocoder"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imoprt the html data using pandas read_html "
+    "**Imoprt the html data using pandas read_html**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +153,7 @@
        "4         M5A  Downtown Toronto  Regent Park, Harbourfront"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +245,7 @@
        "6         M7A  Downtown Toronto  Queen's Park, Ontario Provincial Government"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +337,7 @@
        "4         M7A  Downtown Toronto  Queen's Park, Ontario Provincial Government"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +397,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +546,7 @@
        "[103 rows x 3 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,6 +555,26 @@
     "df = df.groupby(['Postal Code'], sort=False).agg(','.join)\n",
     "df=df.reset_index()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 3)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
