--- a/Kmeans_clustering_neighborhood.ipynb
+++ b/Kmeans_clustering_neighborhood.ipynb
@@ -864,28 +864,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your credentails:\n",
-      "CLIENT_ID: D0NSK155G0KD05JUHZZ3C14ZNOG3DGP335KJCRISX3HKWOG3\n",
-      "CLIENT_SECRET:WDDKFGRZ4Q5Y5ZNXQBZOFBTF42KWH1VCJUIRNEPTKP5HNMBM\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
-    "CLIENT_ID =  # your Foursquare ID\n",
-    "CLIENT_SECRET =  # your Foursquare Secret\n",
-    "VERSION = '20180605' # Foursquare API version\n",
+    "#CLIENT_ID =  # your Foursquare ID\n",
+    "#CLIENT_SECRET =  # your Foursquare Secret\n",
+    "#VERSION = '20180605' # Foursquare API version\n",
     "\n",
-    "print('Your credentails:')\n",
-    "print('CLIENT_ID: ' + CLIENT_ID)\n",
-    "print('CLIENT_SECRET:' + CLIENT_SECRET)\n"
+    "#print('Your credentails:')\n",
+    "#print('CLIENT_ID: ' + CLIENT_ID)\n",
+    "#print('CLIENT_SECRET:' + CLIENT_SECRET)\n"
    ]
   },
   {
